# safe-shell

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/sandbox/: Cargo.toml  README.md
crates/sandbox/src/: lib.rs  macos.rs  proxy.rs
crates/scanner/: Cargo.toml  README.md
crates/scanner/src/: config.rs  entropy.rs  rules.rs  scanner.rs
crates/sf-core/: Cargo.toml
crates/sf-core/src/: env_scrub.rs  lib.rs  path_rules.rs
crates/shell/: Cargo.toml
crates/shell/profiles/: cargo.toml  docker.toml  go.toml  minimal.toml  npm.toml  terraform.toml
crates/shell/src/: cli.rs  hook.rs  main.rs  profiles.rs
crates/shell/tests/: env_scrub.rs  network.rs  postinstall.rs  profiles.rs  security.rs  shield.rs  shield_aliases.rs  shield_integration.rs
crates/ss-cli/: Cargo.toml
crates/ss-cli/src/: hook.rs  main.rs  profiles.rs
crates/ss-cli/tests/: env_scrub.rs  filesystem.rs  security.rs  shield_integration.rs
crates/ss-sandbox/: Cargo.toml
crates/ss-sandbox/src/: proxy.rs
demo/: axios-attack.sh  run-demo.sh  setup-fake-home.sh
profiles/: pip.toml
