[workspace]
members = ["crates/scanner", "crates/sandbox", "crates/shell"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/claudexai/safe-shell"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Secret detection
regex = "1"

# Path utilities
glob = "0.3"
which = "6"
dirs = "5"

# Network proxy
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }

# Utility
thiserror = "2"

# Internal crates
safe-shell-scanner = { path = "crates/scanner" }
safe-shell-sandbox = { path = "crates/sandbox" }
