[package]
name = "safe-shell-sandbox"
description = "OS-level isolation — Seatbelt sandbox, domain-filtering proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
safe-shell-scanner = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
tokio = { workspace = true }
