[package]
name = "safe-shell-scanner"
description = "Secret detection engine — env scrubbing, regex rules, path scanning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
