[package]
name = "sf-core"
description = "Shared secret detection engine for safe-shell and secret-fence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
