[package]
name = "safe-shell"
description = "Run any command in a secret-aware OS-level sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "safe-shell"
path = "src/main.rs"

[dependencies]
sf-core = { workspace = true }
ss-sandbox = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
