[package]
name = "ss-sandbox"
description = "OS-level isolation for safe-shell (Seatbelt on macOS)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sf-core = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
tokio = { workspace = true }
